--- a/.github/workflows/x86-19.07.yml
+++ b/.github/workflows/x86-19.07.yml
@@ -31,15 +31,14 @@ jobs:
     steps:
 
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@dev-19.07
         with:
-          ref: master
+          ref: dev-19.07
 
       - name: Space cleanup
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          docker rmi `docker images -q`
           sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
           sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
           sudo -E apt-get update
