--- a/.github/workflows/x86-19.07.yml
+++ b/.github/workflows/x86-19.07.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
 
       - name: Checkout
-        uses: actions/checkout@dev-19.07
+        uses: actions/checkout@master
         with:
           ref: dev-19.07
 
